# semantic_queries_poc

./: .gitignore  pyproject.toml  semantic_queries.py
