[tool.poetry]
name = "semantic-queries-poc"
version = "0.1.0"
description = ""
authors = ["saswata"]
readme = ""


[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
ptpython = "^3.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
